// APPLY THE SAME CONFIGURATION INSIDE ALL PROJECTS
subprojects {
	
	repositories {
    	mavenLocal()
    	jcenter()
    	mavenCentral()
	}
	
	buildscript {
	    dependencies {
	        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE")
	    }
	    
	    repositories {
	    	mavenCentral()
		}
	}
	
	apply plugin: 'java'
	apply plugin: 'eclipse'
	apply plugin: 'maven'
	apply plugin: 'jacoco'
	
	group = 'org.iStat'
	
	sourceCompatibility = 1.8
	targetCompatibility = 1.8

	sourceSets {
	    main {
	        java {
	            srcDirs = ['src/main/java']
	        }
	        resources {
	            srcDirs = ['src/main/resources']
	        }
	    }
	}
	
	jacocoTestReport {
	    reports {
	        xml.enabled false
	        csv.enabled false
	        html.destination "${buildDir}/jacoco/reports/html"
	    }
    }
    	
	dependencies {
		testCompile group: 'junit', name: 'junit', version: '4.12'
   		testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
   		
   		compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
	}
	
}